[package]
name = "ecinject_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
litcrypt = "0.3.0"
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["winbase"] }
md-5 = "0.10.6"


[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
]